// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payment model should instantiate with default values 1`] = `
Object {
  "_embedded": null,
  "amountCaptured": null,
  "getPaymentUrl": [Function],
  "isAuthorized": [Function],
  "isCanceled": [Function],
  "isExpired": [Function],
  "isOpen": [Function],
  "isPaid": [Function],
  "isRefundable": [Function],
  "orderId": null,
  "toPlainObject": [Function],
}
`;

exports[`payment model should instantiate with given values 1`] = `
Object {
  "_embedded": null,
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/payscreen/select-method/WDqYK6vllg",
      "type": "text/html",
    },
    "documentation": Object {
      "href": "https://docs.mollie.com/reference/v2/payments-api/get-payment",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_WDqYK6vllg",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "EUR",
    "value": "10.00",
  },
  "amountCaptured": null,
  "createdAt": "2018-03-20T13:13:37+00:00",
  "description": "Order #12345",
  "details": null,
  "expiresAt": "2018-03-20T13:28:37+00:00",
  "getPaymentUrl": [Function],
  "id": "tr_WDqYK6vllg",
  "isAuthorized": [Function],
  "isCancelable": false,
  "isCanceled": [Function],
  "isExpired": [Function],
  "isOpen": [Function],
  "isPaid": [Function],
  "isRefundable": [Function],
  "metadata": Object {
    "order_id": "12345",
  },
  "method": null,
  "mode": "test",
  "orderId": null,
  "profileId": "pfl_QkEhN94Ba",
  "redirectUrl": "https://webshop.example.org/order/12345/",
  "resource": "payment",
  "sequenceType": "oneoff",
  "status": "open",
  "toPlainObject": [Function],
  "webhookUrl": "https://webshop.example.org/payments/webhook/",
}
`;
